I fixed the contact page spacing on the general info, I am now finished and moving onto the presentation part of the project/assignment

--- a/style.css
+++ b/style.css
@@ -248,18 +248,18 @@ input, textarea, select {
 }
 
 .ginfo {
-  margin-left: 13%;
+  margin-left: 10%;
 }
 
 .winfo {
-    margin-left: 3%;
+    margin-left: 2%;
 }
 
 .info {
   margin: auto;
-  font-size: 1.45vw;
-  padding-left: 4%;
-  margin-top: 4%;
+  font-size: 1.3vw;
+  display: inline;
+  float: right;
 }
 
 th {
@@ -267,13 +267,17 @@ th {
   white-space: nowrap;
   text-align: center;
 }
+td.info {
+  padding-left: 5%;
+}
+
 
 .hours {
-  width: 45%;
+  width: 50%;
   font-size: 1.5vw;
 }
 .right {
-  padding-left: 10%;
+  padding-left: 22%;
   padding-bottom: 3%;
 }
 
